gcc/testsuite/rust/rustc/ui/expr/if/if-without-block_dg.rs
fn main() {
    let n = 1;
    if 5 == {
// { dg-error "" "" { target *-*-* } .-1 }
        println!("five");
    }
}

